<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_style"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/navigation_bar_style"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.micar.component.TextViewCustom
            style="@style/navbar_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        style="@style/yellow_strip_style"
        android:gravity="center"
        android:orientation="horizontal" >

        <com.micar.component.ButtonCustom
            android:id="@+id/btn_list"
            style="@style/map_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_btn"
            android:text="@string/list_label" />

        <com.micar.component.ButtonCustom
            android:id="@+id/btn_map"
            style="@style/map_btn_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_btn"
            android:text="@string/map_label" />
    </LinearLayout>

    <ListView
        android:id="@+id/listview_car"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="false" >
    </ListView>

</LinearLayout>